packages/rocket/rocket-0.4.10/core/codegen/tests/ui-fail/from_form.stderr
error: enums are not supported
 --> $DIR/from_form.rs:6:1
  |
6 | enum Thing { }
  | ^^^^^^^^^^^^^^
  |
note: error occurred while deriving `FromForm`
 --> $DIR/from_form.rs:5:10
  |
5 | #[derive(FromForm)]
  |          ^^^^^^^^
  = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: tuple structs are not supported
  --> $DIR/from_form.rs:10:1
   |
10 | struct Foo1;
   | ^^^^^^^^^^^^
   |
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:9:10
   |
9  | #[derive(FromForm)]
   |          ^^^^^^^^
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: at least one field is required
  --> $DIR/from_form.rs:14:1
   |
14 | struct Foo2 {  }
   | ^^^^^^^^^^^^^^^^
   |
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:13:10
   |
13 | #[derive(FromForm)]
   |          ^^^^^^^^
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: tuple structs are not supported
  --> $DIR/from_form.rs:18:1
   |
18 | struct Foo3(usize);
   | ^^^^^^^^^^^^^^^^^^^
   |
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:17:10
   |
17 | #[derive(FromForm)]
   |          ^^^^^^^^
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: only one lifetime is supported
  --> $DIR/from_form.rs:22:20
   |
22 | struct NextTodoTask<'f, 'a> {
   |                    ^^^^^^^^
   |
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:21:10
   |
21 | #[derive(FromForm)]
   |          ^^^^^^^^
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid form field name
  --> $DIR/from_form.rs:32:20
   |
32 |     #[form(field = "isindex")]
   |                    ^^^^^^^^^
   |
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:30:10
   |
30 | #[derive(FromForm)]
   |          ^^^^^^^^
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: duplicate field name
  --> $DIR/from_form.rs:41:5
   |
41 |     foo: usize,
   |     ^^^
   |
note: previous definition here
  --> $DIR/from_form.rs:39:20
   |
39 |     #[form(field = "foo")]
   |                    ^^^^^
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:37:10
   |
37 | #[derive(FromForm)]
   |          ^^^^^^^^
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: duplicate field name
  --> $DIR/from_form.rs:49:20
   |
49 |     #[form(field = "hello")]
   |                    ^^^^^^^
   |
note: previous definition here
  --> $DIR/from_form.rs:47:20
   |
47 |     #[form(field = "hello")]
   |                    ^^^^^^^
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:45:10
   |
45 | #[derive(FromForm)]
   |          ^^^^^^^^
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: duplicate field name
  --> $DIR/from_form.rs:57:20
   |
57 |     #[form(field = "first")]
   |                    ^^^^^^^
   |
note: previous definition here
  --> $DIR/from_form.rs:56:5
   |
56 |     first: String,
   |     ^^^^^
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:54:10
   |
54 | #[derive(FromForm)]
   |          ^^^^^^^^
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: duplicate attribute parameter: field
  --> $DIR/from_form.rs:64:28
   |
64 |     #[form(field = "blah", field = "bloo")]
   |                            ^^^^^^^^^^^^^^
   |
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:62:10
   |
62 | #[derive(FromForm)]
   |          ^^^^^^^^
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: malformed attribute: expected list
  --> $DIR/from_form.rs:71:7
   |
71 |     #[form]
   |       ^^^^
   |
   = help: expected syntax: #[form(key = value, ..)]
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:69:10
   |
69 | #[derive(FromForm)]
   |          ^^^^^^^^
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected key/value pair
  --> $DIR/from_form.rs:78:12
   |
78 |     #[form("blah")]
   |            ^^^^^^
   |
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:76:10
   |
76 | #[derive(FromForm)]
   |          ^^^^^^^^
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected key/value pair
  --> $DIR/from_form.rs:85:12
   |
85 |     #[form(123)]
   |            ^^^
   |
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:83:10
   |
83 | #[derive(FromForm)]
   |          ^^^^^^^^
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected attribute parameter: `beep`
  --> $DIR/from_form.rs:92:12
   |
92 |     #[form(beep = "bop")]
   |            ^^^^^^^^^^^^
   |
note: error occurred while deriving `FromForm`
  --> $DIR/from_form.rs:90:10
   |
90 | #[derive(FromForm)]
   |          ^^^^^^^^
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: duplicate invocation of `form` attribute
   --> $DIR/from_form.rs:100:5
    |
100 |     #[form(field = "bleh")]
    |     ^^^^^^^^^^^^^^^^^^^^^^^
    |
note: error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:97:10
    |
97  | #[derive(FromForm)]
    |          ^^^^^^^^
    = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid value: expected string literal
   --> $DIR/from_form.rs:107:20
    |
107 |     #[form(field = true)]
    |                    ^^^^
    |
note: error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:105:10
    |
105 | #[derive(FromForm)]
    |          ^^^^^^^^
    = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected literal or key/value pair
   --> $DIR/from_form.rs:114:12
    |
114 |     #[form(field)]
    |            ^^^^^
    |
note: error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:112:10
    |
112 | #[derive(FromForm)]
    |          ^^^^^^^^
    = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid value: expected string literal
   --> $DIR/from_form.rs:121:20
    |
121 |     #[form(field = 123)]
    |                    ^^^
    |
note: error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:119:10
    |
119 | #[derive(FromForm)]
    |          ^^^^^^^^
    = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid form field name
   --> $DIR/from_form.rs:128:20
    |
128 |     #[form(field = "hello&world")]
    |                    ^^^^^^^^^^^^^
    |
note: error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:126:10
    |
126 | #[derive(FromForm)]
    |          ^^^^^^^^
    = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid form field name
   --> $DIR/from_form.rs:135:20
    |
135 |     #[form(field = "!@#$%^&*()_")]
    |                    ^^^^^^^^^^^^^
    |
note: error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:133:10
    |
133 | #[derive(FromForm)]
    |          ^^^^^^^^
    = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid form field name
   --> $DIR/from_form.rs:142:20
    |
142 |     #[form(field = "?")]
    |                    ^^^
    |
note: error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:140:10
    |
140 | #[derive(FromForm)]
    |          ^^^^^^^^
    = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid form field name
   --> $DIR/from_form.rs:149:20
    |
149 |     #[form(field = "")]
    |                    ^^
    |
note: error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:147:10
    |
147 | #[derive(FromForm)]
    |          ^^^^^^^^
    = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid form field name
   --> $DIR/from_form.rs:156:20
    |
156 |     #[form(field = "a&b")]
    |                    ^^^^^
    |
note: error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:154:10
    |
154 | #[derive(FromForm)]
    |          ^^^^^^^^
    = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error: invalid form field name
   --> $DIR/from_form.rs:163:20
    |
163 |     #[form(field = "a=")]
    |                    ^^^^
    |
note: error occurred while deriving `FromForm`
   --> $DIR/from_form.rs:161:10
    |
161 | #[derive(FromForm)]
    |          ^^^^^^^^
    = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)
